@@ -1,3 +1,8 @@
+2010-01-23  Brian Gough  <bjg@network-theory.co.uk>
+
+	* hyperg_1F1.c (gsl_sf_hyperg_1F1_e): use Kummer transformation
+	for larger range of x when b>a and a<0
+
 2009-07-17  Brian Gough  <bjg@network-theory.co.uk>
 
 	* hyperg_U.c (hyperg_U_series): use a rearrangement of the factor
